Added calculation of speed

--- a/Code/Lights_Pollution.ipynb
+++ b/Code/Lights_Pollution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -17,11 +17,15 @@
     "import os\n",
     "import arcpy\n",
     "import numpy as np\n",
+    "import math\n",
     "from datetime import datetime\n",
     "\n",
-    "inVector = os.path.join('D:\\M.Sc. Gesopatial Tecnologies\\Courses\\SIW011 - Python in GIS\\Final Project\\White-Goose-Light-Pollution\\Data\\Vector\\points.shp')\n",
-    "inRasterFolder = os.path.join('D:\\M.Sc. Gesopatial Tecnologies\\Courses\\SIW011 - Python in GIS\\Final Project\\Images')\n",
-    "outRasterFolder = os.path.join('D:\\M.Sc. Gesopatial Tecnologies\\Courses\\SIW011 - Python in GIS\\Final Project\\White-Goose-Light-Pollution\\Data\\Images_Extent')\n",
+    "\n",
+    "dirPath = os.path.join('D:\\M.Sc. Gesopatial Tecnologies\\Courses\\SIW011 - Python in GIS\\Final Project\\White-Goose-Light-Pollution\\Data')\n",
+    "inVector = os.path.join(dirPath , 'Vector','points.shp')\n",
+    "biomeVector = os.path.join(dirPath,'Vector','tnc_terr_ecoregions.shp')\n",
+    "inRasterFolder = os.path.join(dirPath,'Images')\n",
+    "outRasterFolder = os.path.join(dirPath,'Images_Extent')\n",
     "\n",
     "arcpy.env.workspace = inRasterFolder\n",
     "\n",
@@ -52,6 +56,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Result 'D:\\\\M.Sc. Gesopatial Tecnologies\\\\Courses\\\\SIW011 - Python in GIS\\\\Final Project\\\\White-Goose-Light-Pollution\\\\Data\\\\tundra_breed.shp'>"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Identifying breeding biomes\n",
+    "arcpy.MakeFeatureLayer_management(biomeVector, 'biome')\n",
+    "arcpy.SelectLayerByLocation_management('biome', 'INTERSECT', inVector)\n",
+    "arcpy.SelectLayerByAttribute_management('biome', 'SUBSET_SELECTION', \" ECO_NAME LIKE '%Tundra%' \")\n",
+    "arcpy.CopyFeatures_management('biome', os.path.join(dirPath, 'tundra_breed.shp'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -70,69 +98,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distanceKm(lat1, lon1, lat2, lon2):\n",
+    "    p = math.pi/180\n",
+    "    a = 0.5 - math.cos((lat2-lat1)*p)/2 + math.cos(lat1*p) * math.cos(lat2*p) * (1-math.cos((lon2-lon1)*p))/2\n",
+    "    distance = 2* 6371 * math.asin(math.sqrt(a))\n",
+    "    return distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ExecuteError",
-     "evalue": "ERROR 002126: Unable to convert all of the values from timestamp to time.\nFailed to execute (ConvertTimeField).\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mExecuteError\u001b[0m                              Traceback (most recent call last)",
-      "In  \u001b[0;34m[34]\u001b[0m:\nLine \u001b[0;34m18\u001b[0m:    arcpy.ConvertTimeField_management(inVector, \u001b[33m'\u001b[39;49;00m\u001b[33mtimestamp\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33myyyyMMddHHmmss\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, \u001b[33m'\u001b[39;49;00m\u001b[33mtime\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
-      "File \u001b[0;34mc:\\program files\\arcgis\\pro\\Resources\\arcpy\\arcpy\\management.py\u001b[0m, in \u001b[0;32mConvertTimeField\u001b[0m:\nLine \u001b[0;34m4666\u001b[0m:  \u001b[34mraise\u001b[39;49;00m e\n",
-      "File \u001b[0;34mc:\\program files\\arcgis\\pro\\Resources\\arcpy\\arcpy\\management.py\u001b[0m, in \u001b[0;32mConvertTimeField\u001b[0m:\nLine \u001b[0;34m4663\u001b[0m:  retval = convertArcObjectToPythonObject(gp.ConvertTimeField_management(*gp_fixargs((in_table, input_time_field, input_time_format, output_time_field, output_time_type, output_time_format), \u001b[34mTrue\u001b[39;49;00m)))\n",
-      "File \u001b[0;34mc:\\program files\\arcgis\\pro\\Resources\\arcpy\\arcpy\\geoprocessing\\_base.py\u001b[0m, in \u001b[0;32m<lambda>\u001b[0m:\nLine \u001b[0;34m511\u001b[0m:   \u001b[34mreturn\u001b[39;49;00m \u001b[34mlambda\u001b[39;49;00m *args: val(*gp_fixargs(args, \u001b[34mTrue\u001b[39;49;00m))\n",
-      "\u001b[0;31mExecuteError\u001b[0m: ERROR 002126: Unable to convert all of the values from timestamp to time.\nFailed to execute (ConvertTimeField).\n\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.680626354373915\n"
      ]
     }
    ],
    "source": [
+    "lat = 5.89583 \n",
+    "lon = 52.92667\n",
+    "lat2 = 5.91883\n",
+    "lon2 = 53.00167\n",
+    "\n",
+    "dist = distanceKm(lat,lon,lat2,lon2)\n",
+    "print(dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "###classifying breeding season and adding time and date fields\n",
     "listFields = [field.name for field in arcpy.ListFields(inVector)]\n",
-    "checkFields = {'isBreed':'SHORT', 'time':'DATE', 'date':'DATE'}\n",
+    "checkFields = {'isBreed':'SHORT', 'date':'DATE','speed':'DOUBLE'}\n",
     "for field, fieldType in checkFields.items():\n",
     "    if field in listFields:\n",
     "        arcpy.DeleteField_management(inVector, field)\n",
     "    arcpy.AddField_management(inVector, field, fieldType)\n",
     "\n",
-    "fields = ['SHAPE@XY', 'timestamp', 'isBreed', 'date']\n",
+    "    \n",
+    "fields = ['SHAPE@XY', 'tag_ident', 'timestamp', 'isBreed', 'date', 'speed']\n",
     "\n",
     "with arcpy.da.UpdateCursor(inVector,fields) as cursor:\n",
+    "    index = 0\n",
     "    for row in cursor:\n",
-    "        time = datetime.strptime(row[1], '%Y-%m-%d %H:%M:%S')\n",
-    "        row[2] = checkBreedingTime(time)\n",
-    "        row[3] = time.date()\n",
-    "        cursor.updateRow(row)\n",
-    "\n",
-    "arcpy.ConvertTimeField_management(inVector, 'timestamp', \"yyyyMMddHHmmss\", 'time')\n",
-    "\n",
+    "        \n",
+    "        time = datetime.strptime(row[2], '%Y-%m-%d %H:%M:%S')\n",
+    "        row[3] = checkBreedingTime(time)\n",
+    "        row[4] = time.date()\n",
+    "        \n",
+    "        lon , lat = row[0]\n",
+    "        currentTime = time\n",
+    "        currentGroup = row[1]\n",
+    "        \n",
+    "        if index > 0:\n",
+    "            if currentGroup == previousGroup:\n",
+    "                distance = distanceKm(lat, lon, lat2, lon2)\n",
+    "                seconds = abs((currentTime - previousTime).total_seconds())\n",
+    "                speed = distance/seconds if seconds > 0 else 0\n",
+    "            else:\n",
+    "                distance = 0\n",
+    "        else:\n",
+    "            distance = 0\n",
+    "        \n",
+    "        row[5] = distance\n",
+    "        \n",
+    "        previousTime = time\n",
+    "        previousGroup = currentGroup\n",
+    "        lon2 = lon\n",
+    "        lat2 = lat\n",
+    "        \n",
+    "        index = index + 1\n",
+    "        cursor.updateRow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Breeding points:  521\n",
+      "Non Breeding points:  6842\n"
+     ]
+    }
+   ],
+   "source": [
     "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('isBreed'))\n",
     "breedingCount = (inVectorArray['isBreed'] == 1).sum()\n",
     "nonBreedingCount = (inVectorArray['isBreed'] == 0).sum()\n",
     "print('Breeding points: ', breedingCount)\n",
     "print('Non Breeding points: ', nonBreedingCount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.time(0, 0)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hola = datetime.strptime('2012-01-10 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
-    "hola.time()"
    ]
   }
  ],
