Added light Values calculation

--- a/Code/Lights_Pollution.ipynb
+++ b/Code/Lights_Pollution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,31 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Result 'D:\\\\M.Sc. Gesopatial Tecnologies\\\\Courses\\\\SIW011 - Python in GIS\\\\Final Project\\\\White-Goose-Light-Pollution\\\\Data\\\\tundra_breed.shp'>"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Identifying breeding biomes\n",
     "arcpy.MakeFeatureLayer_management(biomeVector, 'biome')\n",
     "arcpy.SelectLayerByLocation_management('biome', 'INTERSECT', inVector)\n",
     "arcpy.SelectLayerByAttribute_management('biome', 'SUBSET_SELECTION', \" ECO_NAME LIKE '%Tundra%' \")\n",
-    "arcpy.CopyFeatures_management('biome', os.path.join(dirPath, 'tundra_breed.shp'))"
+    "arcpy.CopyFeatures_management('biome', os.path.join(dirPath, 'tundra_breed.shp'))\n",
+    "\n",
+    "tundraVector  = os.path.join(dirPath,'Vector','tundra_breed.shp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +80,16 @@
     "        breedingStartTime = datetime(year, 5, 24)\n",
     "        breedingEndTime = datetime(year, 6, 7)\n",
     "        if date > breedingStartTime and date < breedingEndTime:\n",
-    "            isBreeding = 1\n",
+    "            isBreeding = True\n",
     "            break\n",
     "        else:\n",
-    "            isBreeding = 0\n",
+    "            isBreeding = False\n",
     "    return isBreeding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,36 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.680626354373915\n"
-     ]
-    }
-   ],
-   "source": [
-    "lat = 5.89583 \n",
-    "lon = 52.92667\n",
-    "lat2 = 5.91883\n",
-    "lon2 = 53.00167\n",
-    "\n",
-    "dist = distanceKm(lat,lon,lat2,lon2)\n",
-    "print(dist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "###classifying breeding season and adding time and date fields\n",
     "listFields = [field.name for field in arcpy.ListFields(inVector)]\n",
-    "checkFields = {'isBreed':'SHORT', 'date':'DATE','speed':'DOUBLE'}\n",
+    "checkFields = {'isBreed':'SHORT', 'date':'DATE','speed':'DOUBLE', 'NTL_int': 'SHORT'}\n",
     "for field, fieldType in checkFields.items():\n",
     "    if field in listFields:\n",
     "        arcpy.DeleteField_management(inVector, field)\n",
@@ -153,14 +121,12 @@
     "    index = 0\n",
     "    for row in cursor:\n",
     "        \n",
-    "        time = datetime.strptime(row[2], '%Y-%m-%d %H:%M:%S')\n",
-    "        row[3] = checkBreedingTime(time)\n",
-    "        row[4] = time.date()\n",
-    "        \n",
+    "        # Get current coordinates, time and goose id information \n",
+    "        currentTime = datetime.strptime(row[2], '%Y-%m-%d %H:%M:%S')\n",
     "        lon , lat = row[0]\n",
-    "        currentTime = time\n",
     "        currentGroup = row[1]\n",
     "        \n",
+    "        # Calculate values starting from the second feature for each group - white-fronted goose id -\n",
     "        if index > 0:\n",
     "            if currentGroup == previousGroup:\n",
     "                distance = distanceKm(lat, lon, lat2, lon2)\n",
@@ -171,9 +137,13 @@
     "        else:\n",
     "            distance = 0\n",
     "        \n",
+    "        ## updating fields\n",
+    "        row[3] = 0\n",
+    "        row[4] = currentTime.date()\n",
     "        row[5] = distance\n",
     "        \n",
-    "        previousTime = time\n",
+    "        # Set previos information by assigning current information - for next iteration\n",
+    "        previousTime = currentTime\n",
     "        previousGroup = currentGroup\n",
     "        lon2 = lon\n",
     "        lat2 = lat\n",
@@ -184,24 +154,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Breeding points:  521\n",
-      "Non Breeding points:  6842\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('isBreed'))\n",
+    "## identify breeding points based on time and location\n",
+    "with arcpy.da.UpdateCursor(inVector,['SHAPE@XY','timestamp','isBreed']) as cursor:\n",
+    "    for row in cursor:\n",
+    "        x,y = row[0]\n",
+    "        time = datetime.strptime(row[1], '%Y-%m-%d %H:%M:%S')\n",
+    "        cursorShp = arcpy.SearchCursor(tundraVector)\n",
+    "        for rowid in cursorShp:\n",
+    "            poly = rowid.Shape\n",
+    "            if poly.contains(arcpy.Point(x,y)) and checkBreedingTime(time):\n",
+    "                row[2] = 1\n",
+    "        cursor.updateRow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arcpy.env.workspace = outRasterFolder\n",
+    "lightRasters = arcpy.ListRasters()[0:2] \n",
+    "\n",
+    "with arcpy.da.UpdateCursor(inVector,['SHAPE@XY','date','NTL_int']) as cursor:\n",
+    "    for year in range(2007,2009):\n",
+    "        for row in cursor:\n",
+    "            for raster in lightRasters:\n",
+    "                rasterDesc =  arcpy.Describe(raster)\n",
+    "                if row[1].year == year and str(year) in rasterDesc.name:\n",
+    "                    x, y = row[0]\n",
+    "                    coords = str(x) + \" \" + str(y)\n",
+    "                    row[2] = float(arcpy.GetCellValue_management(raster, coords)[0])\n",
+    "                    continue\n",
+    "            cursor.updateRow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('isBreed','NTL_int'))\n",
     "breedingCount = (inVectorArray['isBreed'] == 1).sum()\n",
     "nonBreedingCount = (inVectorArray['isBreed'] == 0).sum()\n",
+    "\n",
+    "if inVectorArray['isBreed'] == 1:\n",
+    "    meanLightBreed = inVectorArray['NTL_int'].mean()\n",
+    "\n",
     "print('Breeding points: ', breedingCount)\n",
-    "print('Non Breeding points: ', nonBreedingCount)"
+    "print('Non Breeding points: ', nonBreedingCount)\n",
+    "print('Breeding Light Mean: ', meanLightBreed)"
    ]
   }
  ],
