--- a/Code/Lights_Pollution.ipynb
+++ b/Code/Lights_Pollution.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Libraries and Paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import arcpy\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import scipy as sp\n",
+    "from matplotlib import pyplot as plt\n",
+    "from datetime import datetime\n",
+    "\n",
+    "dirPath = os.path.join('D:\\M.Sc. Gesopatial Tecnologies\\Courses\\SIW011 - Python in GIS\\Final Project\\White-Goose-Light-Pollution\\Data')\n",
+    "inVector = os.path.join(dirPath , 'Vector','points.shp')\n",
+    "biomeVector = os.path.join(dirPath,'Vector','tnc_terr_ecoregions.shp')\n",
+    "inRasterFolder = os.path.join(dirPath,'Images')\n",
+    "outRasterFolder = os.path.join(dirPath,'Images_Extent')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clip rasters to goose spatial extent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,19 +49,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import arcpy\n",
-    "import numpy as np\n",
-    "import math\n",
-    "from datetime import datetime\n",
-    "\n",
-    "\n",
-    "dirPath = os.path.join('D:\\M.Sc. Gesopatial Tecnologies\\Courses\\SIW011 - Python in GIS\\Final Project\\White-Goose-Light-Pollution\\Data')\n",
-    "inVector = os.path.join(dirPath , 'Vector','points.shp')\n",
-    "biomeVector = os.path.join(dirPath,'Vector','tnc_terr_ecoregions.shp')\n",
-    "inRasterFolder = os.path.join(dirPath,'Images')\n",
-    "outRasterFolder = os.path.join(dirPath,'Images_Extent')\n",
-    "\n",
     "arcpy.env.workspace = inRasterFolder\n",
     "\n",
     "## getting extent and adding 1000m\n",
@@ -35,9 +57,6 @@
     "bufferDistance = 0.0001388  ##1000m in degree units\n",
     "extentString = str(extent.XMin - bufferDistance) + ' ' + str(extent.YMin - bufferDistance) + ' ' +  \\\n",
     "                str(extent.XMax + bufferDistance) + ' ' + str(extent.YMax + bufferDistance) \n",
-    "print(extentString)\n",
-    "\n",
-    "\n",
     "###clipping each raster\n",
     "inRasters = arcpy.ListRasters()\n",
     "for raster in inRasters:\n",
@@ -55,18 +74,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Identifying breeding biomes\n",
-    "arcpy.MakeFeatureLayer_management(biomeVector, 'biome')\n",
-    "arcpy.SelectLayerByLocation_management('biome', 'INTERSECT', inVector)\n",
-    "arcpy.SelectLayerByAttribute_management('biome', 'SUBSET_SELECTION', \" ECO_NAME LIKE '%Tundra%' \")\n",
-    "arcpy.CopyFeatures_management('biome', os.path.join(dirPath, 'tundra_breed.shp'))\n",
-    "\n",
-    "tundraVector  = os.path.join(dirPath,'Vector','tundra_breed.shp')"
+    "### Calculate initial breeding and speed values"
    ]
   },
   {
@@ -153,6 +164,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identify breeding points based on time and biome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Identifying breeding biomes\n",
+    "arcpy.MakeFeatureLayer_management(biomeVector, 'biome')\n",
+    "arcpy.SelectLayerByLocation_management('biome', 'INTERSECT', inVector)\n",
+    "arcpy.SelectLayerByAttribute_management('biome', 'SUBSET_SELECTION', \" ECO_NAME LIKE '%Tundra%' \")\n",
+    "arcpy.CopyFeatures_management('biome', os.path.join(dirPath, 'tundra_breed.shp'))\n",
+    "\n",
+    "tundraVector  = os.path.join(dirPath,'Vector','tundra_breed.shp')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -173,24 +206,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Breeding points:  436\n",
+      "Non Breeding points:  6927\n"
+     ]
+    }
+   ],
+   "source": [
+    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('isBreed'))\n",
+    "breedingCount = (inVectorArray['isBreed'] == 1).sum()\n",
+    "nonBreedingCount = (inVectorArray['isBreed'] == 0).sum()\n",
+    "\n",
+    "print('Breeding points: ', breedingCount)\n",
+    "print('Non Breeding points: ', nonBreedingCount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate Light Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def getRasterYear(rasters, year):\n",
+    "    for raster in rasters:\n",
+    "        rasterDesc =  arcpy.Describe(raster)\n",
+    "        if str(year) in rasterDesc.name:\n",
+    "            rasterYear = raster\n",
+    "    return rasterYear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##calculating light values at goose locations based on year.\n",
     "arcpy.env.workspace = outRasterFolder\n",
     "lightRasters = arcpy.ListRasters()[0:2] \n",
     "\n",
-    "with arcpy.da.UpdateCursor(inVector,['SHAPE@XY','date','NTL_int']) as cursor:\n",
-    "    for year in range(2007,2009):\n",
+    "for year in range(2007,2009):\n",
+    "    raster = getRasterYear(lightRasters, year)\n",
+    "    with arcpy.da.UpdateCursor(inVector,['SHAPE@XY','date','NTL_int']) as cursor:\n",
     "        for row in cursor:\n",
-    "            for raster in lightRasters:\n",
-    "                rasterDesc =  arcpy.Describe(raster)\n",
-    "                if row[1].year == year and str(year) in rasterDesc.name:\n",
-    "                    x, y = row[0]\n",
-    "                    coords = str(x) + \" \" + str(y)\n",
-    "                    row[2] = float(arcpy.GetCellValue_management(raster, coords)[0])\n",
-    "                    continue\n",
+    "            if row[1].year == year:\n",
+    "                x, y = row[0]\n",
+    "                coords = str(x) + \" \" + str(y)\n",
+    "                row[2] = float(arcpy.GetCellValue_management(raster, coords)[0])\n",
     "            cursor.updateRow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean:  3.903669724770642\n",
+      "median:  4.0\n",
+      "var:  1.0824635973402914\n",
+      "std:  1.0404151081853297\n"
+     ]
+    }
+   ],
+   "source": [
+    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('isBreed','NTL_int'))\n",
+    "breedingLight = inVectorArray[inVectorArray['isBreed'] == 1]['NTL_int']\n",
+    "print('mean: ', np.mean(breedingLight))\n",
+    "print('median: ', np.median(breedingLight))\n",
+    "print('var: ', np.var(breedingLight))\n",
+    "print('std: ', np.std(breedingLight))\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.hist(breedingLight)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract high light pollution places"
    ]
   },
   {
@@ -198,18 +310,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('isBreed','NTL_int'))\n",
-    "breedingCount = (inVectorArray['isBreed'] == 1).sum()\n",
-    "nonBreedingCount = (inVectorArray['isBreed'] == 0).sum()\n",
-    "\n",
-    "if inVectorArray['isBreed'] == 1:\n",
-    "    meanLightBreed = inVectorArray['NTL_int'].mean()\n",
-    "\n",
-    "print('Breeding points: ', breedingCount)\n",
-    "print('Non Breeding points: ', nonBreedingCount)\n",
-    "print('Breeding Light Mean: ', meanLightBreed)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
