--- a/Code/Lights_Pollution.ipynb
+++ b/Code/Lights_Pollution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###classifying breeding season and adding time and date fields\n",
+    "###classifying breeding season and adding light, speed and date fields\n",
     "listFields = [field.name for field in arcpy.ListFields(inVector)]\n",
     "checkFields = {'isBreed':'SHORT', 'date':'DATE','speed':'DOUBLE', 'NTL_int': 'SHORT'}\n",
     "for field, fieldType in checkFields.items():\n",
@@ -144,14 +144,14 @@
     "                seconds = abs((currentTime - previousTime).total_seconds())\n",
     "                speed = distance/seconds if seconds > 0 else 0\n",
     "            else:\n",
-    "                distance = 0\n",
+    "                speed = 0\n",
     "        else:\n",
-    "            distance = 0\n",
+    "            speed = 0\n",
     "        \n",
     "        ## updating fields\n",
     "        row[3] = 0\n",
     "        row[4] = currentTime.date()\n",
-    "        row[5] = distance\n",
+    "        row[5] = speed\n",
     "        \n",
     "        # Set previos information by assigning current information - for next iteration\n",
     "        previousTime = currentTime\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,30 +271,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean:  3.903669724770642\n",
-      "median:  4.0\n",
-      "var:  1.0824635973402914\n",
-      "std:  1.0404151081853297\n"
+      "{'mean': 4.013986013986014, 'median': 4.0, 'var': 0.034769426377817984, 'std:': 0.18646561714648088}\n",
+      "{'mean': 3.6933333333333334, 'median': 3.0, 'var': 3.0126222222222223, 'std:': 1.7356907046539778}\n"
      ]
     }
    ],
    "source": [
-    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('isBreed','NTL_int'))\n",
-    "breedingLight = inVectorArray[inVectorArray['isBreed'] == 1]['NTL_int']\n",
-    "print('mean: ', np.mean(breedingLight))\n",
-    "print('median: ', np.median(breedingLight))\n",
-    "print('var: ', np.var(breedingLight))\n",
-    "print('std: ', np.std(breedingLight))\n",
+    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('date','isBreed','NTL_int'))\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.hist(breedingLight)\n",
+    "breedStats = {}\n",
+    "f, axarr = plt.subplots(2, 1, figsize=(3,5))\n",
+    "for year in range(2007,2009):\n",
+    "    breedingLight = inVectorArray[(inVectorArray['date'] > datetime(year,1,1)) & \\\n",
+    "                                  (inVectorArray['date'] < datetime(year,12,31)) & \\\n",
+    "                                  (inVectorArray['isBreed'] == 1)]['NTL_int']\n",
+    "    \n",
+    "    stats = {'mean': np.mean(breedingLight), 'median': np.median(breedingLight), \\\n",
+    "             'var': np.var(breedingLight), 'std:': np.std(breedingLight)}\n",
+    "    breedStats[year] = stats\n",
+    "    \n",
+    "    axarr[year-2007].hist(breedingLight)\n",
+    "    axarr[year-2007].set_title(str(year))\n",
+    "\n",
+    "print(breedStats[2007])\n",
+    "print(breedStats[2008])\n",
     "plt.show()"
    ]
   },
@@ -303,6 +310,116 @@
    "metadata": {},
    "source": [
     "### Extract high light pollution places"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CheckedOut'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import arcpy\n",
+    "from arcpy.sa import *\n",
+    "arcpy.CheckOutExtension('Spatial')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F162007.v4b_web.avg_vis.tif\n",
+      "F162008.v4b_web.avg_vis.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "arcpy.env.workspace = outRasterFolder\n",
+    "lightRasters = arcpy.ListRasters()\n",
+    "\n",
+    "for year in range(2007,2009):\n",
+    "    raster = getRasterYear(lightRasters, year)\n",
+    "    inRaster = arcpy.Raster(raster)\n",
+    "    outCon = Con((inRaster > 30) & (inRaster < 64), 1)\n",
+    "    outPolygons = os.path.join(dirPath, 'Vector', 'class_' + str(year) + '.shp')\n",
+    "    arcpy.RasterToPolygon_conversion(outCon, outPolygons, \"NO_SIMPLIFY\", 'VALUE')\n",
+    "    print(inRaster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##near analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pltColor(lst):\n",
+    "    cols=[]\n",
+    "    for i in lst:\n",
+    "        if i== 0:\n",
+    "            cols.append('orange')\n",
+    "        else:\n",
+    "            cols.append('blue')\n",
+    "    return cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'min': 2852.34709024, 'mean': 112003.78525405582, 'max:': 272306.193932, 'median': 58775.6371161, 'std:': 88817.09887696413} \n",
+      " (-0.24154829454104657, 3.107102581506163e-98)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats\n",
+    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('date','isBreed','NTL_int','NEAR_DIST'))\n",
+    "\n",
+    "breedingDistance = inVectorArray[(inVectorArray['date'] > datetime(2007,1,1)) & \\\n",
+    "                                  (inVectorArray['date'] < datetime(2008,12,31)) & \\\n",
+    "                                  (inVectorArray['isBreed'] == 1)]['NEAR_DIST']\n",
+    "\n",
+    "statsDist = stats = {'min': np.min(breedingDistance),'mean': np.mean(breedingDistance), 'max:': np.max(breedingDistance),'median': np.median(breedingDistance), 'std:': np.std(breedingDistance)}\n",
+    "corrCoef = scipy.stats.pearsonr(inVectorArray['NEAR_DIST'],inVectorArray['NTL_int'])\n",
+    "plt.scatter(x=inVectorArray['NEAR_DIST'],y=inVectorArray['NTL_int'],s=1, c= pltColor(inVectorArray['isBreed']))\n",
+    "print(statsDist, '\\n', corrCoef)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Relative differences in distances and light pollution growth"
    ]
   },
   {
