Basic Visualizations added

--- a/Code/Lights_Pollution.ipynb
+++ b/Code/Lights_Pollution.ipynb
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "import math\n",
     "import scipy as sp\n",
+    "import scipy.stats\n",
     "from matplotlib import pyplot as plt\n",
     "from datetime import datetime\n",
     "\n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,6 +307,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###boxplot"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -314,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +333,7 @@
        "'CheckedOut'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,15 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F162007.v4b_web.avg_vis.tif\n",
-      "F162008.v4b_web.avg_vis.tif\n"
+      "Done:  F162008.v4b_web.avg_vis.tif\n"
      ]
     }
    ],
@@ -352,67 +361,15 @@
     "arcpy.env.workspace = outRasterFolder\n",
     "lightRasters = arcpy.ListRasters()\n",
     "\n",
-    "for year in range(2007,2009):\n",
+    "for year in range(2008,2009):\n",
     "    raster = getRasterYear(lightRasters, year)\n",
     "    inRaster = arcpy.Raster(raster)\n",
     "    outCon = Con((inRaster > 30) & (inRaster < 64), 1)\n",
     "    outPolygons = os.path.join(dirPath, 'Vector', 'class_' + str(year) + '.shp')\n",
-    "    arcpy.RasterToPolygon_conversion(outCon, outPolygons, \"NO_SIMPLIFY\", 'VALUE')\n",
-    "    print(inRaster)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##near analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pltColor(lst):\n",
-    "    cols=[]\n",
-    "    for i in lst:\n",
-    "        if i== 0:\n",
-    "            cols.append('orange')\n",
-    "        else:\n",
-    "            cols.append('blue')\n",
-    "    return cols"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'min': 2852.34709024, 'mean': 112003.78525405582, 'max:': 272306.193932, 'median': 58775.6371161, 'std:': 88817.09887696413} \n",
-      " (-0.24154829454104657, 3.107102581506163e-98)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import scipy.stats\n",
-    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('date','isBreed','NTL_int','NEAR_DIST'))\n",
-    "\n",
-    "breedingDistance = inVectorArray[(inVectorArray['date'] > datetime(2007,1,1)) & \\\n",
-    "                                  (inVectorArray['date'] < datetime(2008,12,31)) & \\\n",
-    "                                  (inVectorArray['isBreed'] == 1)]['NEAR_DIST']\n",
-    "\n",
-    "statsDist = stats = {'min': np.min(breedingDistance),'mean': np.mean(breedingDistance), 'max:': np.max(breedingDistance),'median': np.median(breedingDistance), 'std:': np.std(breedingDistance)}\n",
-    "corrCoef = scipy.stats.pearsonr(inVectorArray['NEAR_DIST'],inVectorArray['NTL_int'])\n",
-    "plt.scatter(x=inVectorArray['NEAR_DIST'],y=inVectorArray['NTL_int'],s=1, c= pltColor(inVectorArray['isBreed']))\n",
-    "print(statsDist, '\\n', corrCoef)\n",
-    "plt.show()"
+    "    highPolution = arcpy.RasterToPolygon_conversion(outCon, outPolygons, \"NO_SIMPLIFY\", 'VALUE')\n",
+    "    outTable = os.path.join(dirPath, 'Tables', 'table_light_' + str(year) + '.dbf')\n",
+    "    ZonalStatisticsAsTable(highPolution, 'Id', raster, outTable, 'NODATA', 'MEAN')\n",
+    "    print('Done: ', inRaster)"
    ]
   },
   {
@@ -424,10 +381,163 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getClassYear(layers, year):\n",
+    "    for layer in layers:\n",
+    "        if str(year) in layer:\n",
+    "            layerYear = layer\n",
+    "    return layerYear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##near analysis\n",
+    "arcpy.env.workspace = os.path.join(dirPath, 'Vector')\n",
+    "classLayers = arcpy.ListFeatureClasses('*class*')\n",
+    "\n",
+    "for year in range(2007,2009):\n",
+    "    layer = getClassYear(classLayers, year)\n",
+    "    condition = \"date > timestamp '{}-12-31' And date < timestamp '{}-01-01'\".format(str(year-1),str(year+1))\n",
+    "    selection = arcpy.SelectLayerByAttribute_management(inVector, selection_type=\"NEW_SELECTION\", where_clause=condition, invert_where_clause=\"\")\n",
+    "    outPath = os.path.join(dirPath , 'Vector', 'points_' + str(year))\n",
+    "    outLayer = arcpy.CopyFeatures_management(selection, outPath)\n",
+    "    outTable = os.path.join(dirPath, 'Tables', 'table_Dist_' + str(year) + '.dbf')\n",
+    "    arcpy.analysis.Near(outLayer, layer, method='Geodesic')\n",
+    "    arcpy.Statistics_analysis(outLayer, outTable, [[\"NEAR_DIST\",\"MIN\"]], [\"NEAR_FID\",\"isBreed\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arcpy.env.workspace = os.path.join(dirPath, 'Tables')\n",
+    "lightTables = arcpy.ListTables('*light*')\n",
+    "distTables = arcpy.ListTables('*Dist*')\n",
+    "\n",
+    "index = 0\n",
+    "for light, dist in zip(lightTables,distTables):\n",
+    "    table = arcpy.JoinField_management(dist, \"NEAR_FID\", light, \"Id\", [\"MEAN\"])\n",
+    "    tableArray = arcpy.da.FeatureClassToNumPyArray(table, ('MIN_NEAR_D','MEAN', 'isBreed'))\n",
+    "    if index == 0:\n",
+    "        tableLight = tableArray\n",
+    "        index = index + 1\n",
+    "    else:\n",
+    "        tableLight = np.concatenate((tableLight, tableArray) , axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1,2)\n",
+    "\n",
+    "breeding = [0,1]\n",
+    "for breed in breeding:\n",
+    "    tbl = tableLight[tableLight['isBreed'] == breed]\n",
+    "    cor , p = scipy.stats.pearsonr(tbl['MIN_NEAR_D'], tbl['MEAN'])\n",
+    "    label = r'$\\rho$:' + str(round(cor,2))\n",
+    "    axs[breed].scatter(tbl['MIN_NEAR_D'], tbl['MEAN'], alpha=0.8, c= 'blue', edgecolors='none', s=30, label=label)\n",
+    "    m, b = np.polyfit(tbl['MIN_NEAR_D'], tbl['MEAN'], 1)\n",
+    "    axs[breed].plot(tbl['MIN_NEAR_D'], m * tbl['MIN_NEAR_D'] + b)\n",
+    "    axs[breed].legend(loc=1)\n",
+    "\n",
+    "fig.suptitle('Mean Light Value vs Min distance')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Relative differences in distances and ligh pollution intensity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arcpy.env.workspace = os.path.join(dirPath, 'Vector')\n",
+    "pointLayers = arcpy.ListFeatureClasses('*points_*')\n",
+    "\n",
+    "index = 0\n",
+    "for layer in pointLayers:\n",
+    "    pointArray = arcpy.da.FeatureClassToNumPyArray(layer, ('NTL_int','NEAR_DIST','isBreed'))\n",
+    "    if index == 0:\n",
+    "        tableArray = pointArray\n",
+    "        index = index + 1\n",
+    "    else:\n",
+    "        tableArray = np.concatenate((tableArray, pointArray), axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'min': 0.0, 'mean': 105087.51624876991, 'max:': 461343.123834, 'median': 55475.0824789, 'std:': 116081.61220253869} \n",
+      " -0.24623900322044084\n",
+      "{'min': 3696.97283464, 'mean': 112416.36667117193, 'max:': 272559.769718, 'median': 59019.61344605, 'std:': 88548.80222212282} \n",
+      " -0.30455007680256\n"
+     ]
+    }
+   ],
+   "source": [
+    "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(9, 4))\n",
+    "for breed in breeding:\n",
+    "    tableBreed = tableArray[tableArray['isBreed'] == breed]\n",
+    "    breedingDistance = tableBreed[tableBreed['isBreed'] == breed]['NEAR_DIST']\n",
+    "    statsDist = {'min': np.min(breedingDistance),'mean': np.mean(breedingDistance), \\\n",
+    "                 'max:': np.max(breedingDistance),'median': np.median(breedingDistance), \\\n",
+    "                 'std:': np.std(breedingDistance)}\n",
+    "    corrCoef, p = scipy.stats.pearsonr(tableBreed['NEAR_DIST'],tableBreed['NTL_int'])\n",
+    "    axs[0].violinplot(breedingDistance, positions = [breed],showmeans=False, showmedians=True)\n",
+    "    axs[0].set_title('Violin plot')\n",
+    "    axs[1].boxplot(breedingDistance, positions = [breed])\n",
+    "    axs[1].set_title('Box plot')\n",
+    "    print(statsDist, '\\n', corrCoef)\n",
+    "    \n",
+    "index = 0\n",
+    "for ax in axs:\n",
+    "    ax.yaxis.grid(True)\n",
+    "    ax.set_xticks([0,1])\n",
+    "    ax.set_xlabel('Season')\n",
+    "    if index == 0:\n",
+    "        ax.set_ylabel('Distances to light pollutant')  \n",
+    "        index = index + 1\n",
+    "plt.setp(axs, xticks=[0,1],\n",
+    "         xticklabels=['breeding', 'non-breeding'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "###box plot, merge all the groups\n",
+    "## connect tundra and pollutant\n",
+    "### related to tundrs how far to light\n",
+    "### compared to other places tundra (optional)\n",
+    "### they avoid light or they like tundra?"
+   ]
   }
  ],
  "metadata": {
